Feat: 이메일 저장 구현